--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   path_provider: ^2.1.5
   timezone: ^0.10.1
   flutter_launcher_icons: ^0.14.3
+  flutter_native_splash: ^2.4.6
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
